# real-estate-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: app.py  app_dashboard.py
data/processed/: answer_eval_results.json  cleaned_documents.json  documents.json  ground_truth.json  retrieval_results.json
docs/: DEVELOPMENT_LOG.md  IMPLEMENTATION_DECISIONS.md  ONNX_EVALUATION_PLAN.md  SDD.md  TASK_BREAKDOWN.md
evaluation/: evaluate_answers.py  evaluate_retrieval.py  generate_ground_truth.py  judge_prompt.txt
evaluation/results/: final_config.md
ingest/: chunker.py  cleaner.py  ingest.py  scraper.py
monitoring/: dashboard.py  judge.py  logger.py
rag/: build_index.py  embedder.py  prompts.py  rag_pipeline.py  search.py
test/: rag_test.ipynb  results.json
